@@ -616,3 +616,24 @@ int nfs_finddir(struct nfsmount *nmp, FAR const char *relpath,
         }
     }
 }
+
+/****************************************************************************
+ * Name: nfs_attrupdate
+ *
+ * Desciption:
+ *   Update file attributes on write or after the file is modified.
+ *
+ * Return Value:
+ *   None.
+ *
+ ****************************************************************************/
+
+void nfs_attrupdate(FAR struct nfsnode *np, FAR struct nfs_fattr *attributes)
+{
+  /* Save a few of the files attribute values in file structur (host order) */
+
+  np->n_type   = fxdr_unsigned(uint32_t, attributes->fa_type);
+  np->n_size   = fxdr_hyper(&attributes->fa_size);
+  fxdr_nfsv3time(&attributes->fa_mtime, &np->n_mtime)
+  np->n_ctime  = fxdr_hyper(&attributes->fa_ctime);
+}
